--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -12,8 +12,8 @@
     <![endif]-->
 
     <!-- Le styles -->
-    <link href="{{ ASSET_PATH }}/css/1.4.0/bootstrap.css" rel="stylesheet">
-    <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
+    <link href="{{ BASE_PATH }}{{ ASSET_PATH }}/css/1.4.0/bootstrap.css" rel="stylesheet">
+    <link href="{{ BASE_PATH }}{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
 
     <!-- Le fav and touch icons -->
   <!-- Update these with your own images
@@ -34,9 +34,9 @@
             <!--{% assign pages_list = site.pages %}
             {% assign group = 'navigation' %}
             {% include JB/pages_list %}-->
-            <li><a href="about.html">About</a></li>
-            <li><a href="lessons.html">Lessons</a></li>
-            <li><a href="workshops.html">Workshops</a></li>
+            <li><a href="http://spatialcarpentry.github.io/about.html">About</a></li>
+            <li><a href="http://spatialcarpentry.github.io/lessons.html">Lessons</a></li>
+            <li><a href="http://spatialcarpentry.github.io/workshops.html">Workshops</a></li>
             <li><a href="http://www.iplantcollaborative.org/" target="_blank">iPlant Collaborative</a></li>
           </ul>
         </div>
