--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -12,8 +12,8 @@
     <![endif]-->
 
     <!-- Le styles -->
-    <link href="{{ BASE_PATH }}{{ ASSET_PATH }}/css/1.4.0/bootstrap.css" rel="stylesheet">
-    <link href="{{ BASE_PATH }}{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
+    <link href="{{ site.baseurl }}{{ BASE_PATH }}{{ ASSET_PATH }}/css/1.4.0/bootstrap.css" rel="stylesheet">
+    <link href="{{ site.baseurl }}{{ BASE_PATH }}{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
 
     <!-- Le fav and touch icons -->
   <!-- Update these with your own images
@@ -29,7 +29,7 @@
     <div class="topbar">
       <div class="fill">
         <div class="container">
-          <a class="brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
+          <a class="brand" href="{{ BASE_PATH }}">{{ site.title }}</a>
           <ul class="nav">
             <!--{% assign pages_list = site.pages %}
             {% assign group = 'navigation' %}
