--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -8,14 +8,14 @@
     <hr>
     <div class="pagination">
       <ul>
-      {% if page.previous %}
-        <li class="prev"><a href="{{ BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; Previous</a></li>
+      {% if page.next %}
+      <li class="prev"><a href="{{ BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">&larr; Previous</a></li>
       {% else %}
         <li class="prev disabled"><a>&larr; Previous</a></li>
       {% endif %}
-        <li><a href="{{ BASE_PATH }}{{ site.JB.archive_path }}">Archive</a></li>
-      {% if page.next %}
-        <li class="next"><a href="{{ BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">Next &rarr;</a></li>
+      <!--<li><a href="{{ BASE_PATH }}{{ site.JB.archive_path }}">Archive</a></li>-->
+      {% if page.previous %}
+      <li class="next"><a href="{{ BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">Next &rarr;</a></li>
       {% else %}
         <li class="next disabled"><a>Next &rarr;</a>
       {% endif %}
@@ -26,8 +26,15 @@
   </div>
   
   <div class="span4">
-    <h4>Published</h4>
-    <div class="date"><span>{{ page.date | date_to_long_string }}</span></div>
+    <!--<h4>Published</h4>
+    <div class="date"><span>{{ page.date | date_to_long_string }}</span></div>-->
+
+    <ul class="posts">
+      <h4>Contents</h4>
+      {% for post in site.posts %}
+        <li><a href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a></li>
+        {% endfor %}
+    </ul>
 
   {% unless page.tags == empty %}
     <h4>Tags</h4>
