Added data-sharing to lessons links

--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -20,6 +20,7 @@
         <li class="next disabled"><a>Next &rarr;</a>
       {% endif %}
       </ul>
+      <span class="back-to-top"><a href="#top">Back to Top</a></span>
     </div>
     <hr>
     <!--{% include JB/comments %}-->
@@ -29,12 +30,23 @@
     <!--<h4>Published</h4>
     <div class="date"><span>{{ page.date | date_to_long_string }}</span></div>-->
 
-    <ul class="posts">
+    <ul class="lessons">
+      <h4>Lessons</h4>
+      <li><a href="http://spatialcarpentry.github.io/setup/">Setup</a></li>
+      <li><a href="http://spatialcarpentry.github.io/basics/">Basics</a></li>
+      <li><a href="http://spatialcarpentry.github.io/data-collection/">Data Collection</a></li>
+      <li><a href="http://spatialcarpentry.github.io/data-hygiene/">Data Hygiene</a></li>
+      <li><a href="http://spatialcarpentry.github.io/spatial-analysis/">Spatial Analysis</a></li>
+      <li><a href="http://spatialcarpentry.github.io/cartography/">Cartography</a></li>
+    </ul>
+
+    <ol class="posts">
       <h4>Contents</h4>
+      <span class="post-nav-title">{{ site.repo_name }}</span>
       {% for post in site.posts %}
         <li><a href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a></li>
         {% endfor %}
-    </ul>
+    </ol>
 
   {% unless page.tags == empty %}
     <h4>Tags</h4>
