--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -25,7 +25,7 @@
   </head>
 
   <body>
-
+    <a name="top"></a>
     <div class="topbar">
       <div class="fill">
         <div class="container">
@@ -50,7 +50,7 @@
       </div>
 
       <footer>
-        <p>&copy; <a href="http://www.iplantcollaborative.org/">iPlant Collaborative</a>, {{ site.author.name }} 
+        <p>&copy; <a href="http://www.iplantcollaborative.org/" target="_blank">iPlant Collaborative</a>, <a href="http://aegis.webhost.uits.arizona.edu/" target="_blank">AEGIS</a>, {{ site.author.name }} 
           with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
           and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
         </p>
