--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -1,5 +1,6 @@
 <div class="page-header">
-  <h1>{{ page.title }} <small>{{ page.tagline }}</small></h1>
+  <!--  <h1>{{ page.title }} <small>{{ page.tagline }}</small></h1> -->
+  <div class="head-left"><span class="head-left-inner">{{ page.title }}</span> <small>{{ page.tagline }}</small></div><div class="head-right"><span class="head-right-inner">{{ site.repo_name }}</span></div>
 </div>
 
 <div class="row">
@@ -30,28 +31,77 @@
     <!--<h4>Published</h4>
     <div class="date"><span>{{ page.date | date_to_long_string }}</span></div>-->
 
-    <ul class="lessons">
+    <ol class="lessons">
       <h4>Lessons</h4>
       <li><a href="http://spatialcarpentry.github.io/setup/">Setup</a></li>
+      {% if site.repo_name == 'Setup' %}
+        <ol>
+          {% for post in site.posts %}
+            <li><a href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a></li>
+          {% endfor %}
+        </ol>
+      {% endif %}
       <li><a href="http://spatialcarpentry.github.io/basics/">Basics</a></li>
+      {% if site.repo_name == 'Basics' %}
+        <ol>
+          {% for post in site.posts %}
+            <li><a href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a></li>
+          {% endfor %}
+        </ol>
+      {% endif %}
       <li><a href="http://spatialcarpentry.github.io/data-collection/">Data Collection</a></li>
+      {% if site.repo_name == 'Data Collection' %}
+        <ol>
+          {% for post in site.posts %}
+            <li><a href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a></li>
+          {% endfor %}
+        </ol>
+      {% endif %}
       <li><a href="http://spatialcarpentry.github.io/data-hygiene/">Data Hygiene</a></li>
+      {% if site.repo_name == 'Data Hygiene' %}
+        <ol>
+          {% for post in site.posts %}
+            <li><a href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a></li>
+          {% endfor %}
+        </ol>
+      {% endif %}
       <li><a href="http://spatialcarpentry.github.io/spatial-analysis/">Spatial Analysis</a></li>
+      {% if site.repo_name == 'Spatial Analysis' %}
+        <ol>
+          {% for post in site.posts %}
+            <li><a href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a></li>
+          {% endfor %}
+        </ol>
+      {% endif %}
       <li><a href="http://spatialcarpentry.github.io/cartography/">Cartography</a></li>
+      {% if site.repo_name == 'Cartography' %}
+        <ol>
+          {% for post in site.posts %}
+            <li><a href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a></li>
+          {% endfor %}
+        </ol>
+      {% endif %}
       <li><a href="http://spatialcarpentry.github.io/data-sharing/">Data Sharing</a></li>
-    </ul>
+      {% if site.repo_name == 'Data Sharing' %}
+        <ol>
+          {% for post in site.posts %}
+            <li><a href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a></li>
+          {% endfor %}
+        </ol>
+      {% endif %}
+    </ol>
 
-    <ol class="posts">
+    <!--<ol class="posts">
       <h4>Contents</h4>
       <span class="post-nav-title">{{ site.repo_name }}</span>
       {% for post in site.posts %}
         <li><a href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a></li>
         {% endfor %}
-    </ol>
+    </ol>-->
 
   {% unless page.tags == empty %}
-    <h4>Tags</h4>
     <ul class="tag_box">
+    <h4>Tags</h4>
     {% assign tags_list = page.tags %}
     {% include JB/tags_list %}
     </ul>
